Refresh of build. Overhaul of test data setup and Thymeleaf runtime configuration. Refresh of dependency versions.