@@ -1,9 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.thymoljs</groupId>
 	<artifactId>thymol</artifactId>
-	<version>2.0.1-pre.3</version>
+	<version>2.0.1-pre.4</version>
 
 	<name>Thymol Project</name>
 	<description>Javascript Thymeleaf Emulation</description>
@@ -12,86 +13,103 @@
 
 	<properties>
 		<thReleaseDate>not yet!</thReleaseDate>
-		<!-- -->
+		<!---->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java-version>1.7</java-version>
+		<java-version>1.8</java-version>
 		<servlet-api-version>2.5</servlet-api-version>
-		<thymeleaf-version>2.1.3.RELEASE</thymeleaf-version>
-		<slf4j-version>1.6.4</slf4j-version>
-		<junit-version>4.10</junit-version>
-		<selenium-java-version>2.44.0</selenium-java-version>
-		<jetty-version>9.2.2.v20140723</jetty-version>
-		<maven-clean-plugin-version>2.5</maven-clean-plugin-version>
-		<maven-compiler-plugin-version>3.1</maven-compiler-plugin-version>
-		<maven-war-plugin-version>2.4</maven-war-plugin-version>
-		<maven-surefire-plugin-version>2.16</maven-surefire-plugin-version>
-		<maven-failsafe-plugin-version>2.16</maven-failsafe-plugin-version>
-		<maven-resources-plugin-version>2.6</maven-resources-plugin-version>
-		<maven-dependency-plugin-version>2.8</maven-dependency-plugin-version>
-		<grunt-maven-plugin-version>1.4.1</grunt-maven-plugin-version>
-		<icu4j-version>53.1</icu4j-version>
+		<thymeleaf-version>2.1.5.RELEASE</thymeleaf-version>
+		<json-io-version>4.8.0</json-io-version>
+		<slf4j-version>1.7.21</slf4j-version>
+		<junit-version>4.12</junit-version>
+		<selenium-java-version>3.0.0-beta4</selenium-java-version>
+		<jetty-version>9.3.13.v20161014</jetty-version>
+		<maven-clean-plugin-version>3.0.0</maven-clean-plugin-version>
+		<maven-compiler-plugin-version>3.5.1</maven-compiler-plugin-version>
+		<maven-war-plugin-version>3.0.0</maven-war-plugin-version>
+		<maven-surefire-plugin-version>2.19.1</maven-surefire-plugin-version>
+		<maven-failsafe-plugin-version>2.19.1</maven-failsafe-plugin-version>
+		<maven-resources-plugin-version>3.0.1</maven-resources-plugin-version>
+		<maven-dependency-plugin-version>2.10</maven-dependency-plugin-version>
+		<grunt-maven-plugin-version>1.5.1</grunt-maven-plugin-version>
+		<icu4j-version>58.1</icu4j-version>
 		<javagalician-version>1.1</javagalician-version>
 		<m2e-lifecycle-mapping-version>1.0.0</m2e-lifecycle-mapping-version>
 		<filtering-value>true</filtering-value>
 		<theWarName>${project.artifactId}-${project.version}</theWarName>
-		<!-- -->
+		<!---->
 		<thThymolPath>${project.basedir}/bower_components/thymol/dist/</thThymolPath>
 		<thThymolSource>thymol-full.js</thThymolSource>
 		<thDeploy>${project.build.directory}/test-classes</thDeploy>
 		<!-- Pushed in Gruntfile.js -->
-		<thBowerJQuerySource>../../jquery/dist/jquery.min.js</thBowerJQuerySource>
-		<thSourceforgeJQuerySource>http://code.jquery.com/jquery-1.11.1.min.js</thSourceforgeJQuerySource>
-		<thJsdelivrJQuerySource>http://cdn.jsdelivr.net/jquery/latest/jquery.min.js</thJsdelivrJQuerySource>
+		<thBowerJQuerySource>../../jquery/dist/jquery.js</thBowerJQuerySource>
+		<thSourceforgeJQuerySource>http://code.jquery.com/jquery-${thymol-jquery-version}.js</thSourceforgeJQuerySource>
+		<thJsdelivrJQuerySource>http://cdn.jsdelivr.net/jquery/latest/jquery.js</thJsdelivrJQuerySource>
 		<thThymolPrelude>Date.prototype.toString=Date.prototype.toUTCString;</thThymolPrelude>
 		<thThymolNodeServer>../thymol-node-server/bin/thymol-server</thThymolNodeServer>
+		<webdriver.gecko.driver>${env.GECKO_DRIVER}</webdriver.gecko.driver>
 	</properties>
 
 	<dependencies>
+	
 		<dependency>
 			<groupId>org.thymeleaf</groupId>
 			<artifactId>thymeleaf</artifactId>
 			<version>${thymeleaf-version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.cedarsoftware</groupId>
+			<artifactId>json-io</artifactId>
+			<version>${json-io-version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 			<version>${servlet-api-version}</version>
 			<scope>provided</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
 			<version>${selenium-java-version}</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>${slf4j-version}</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>${junit-version}</version>
 			<scope>test</scope>
 		</dependency>
+		
 		<dependency>
 			<!-- Find this at https://github.com/downloads/javagalician/javagalician.github.com/javagalician-1.1-dist.zip -->
 			<groupId>org.javagalician</groupId>
 			<artifactId>javagalician-java6</artifactId>
 			<version>${javagalician-version}</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>com.ibm.icu</groupId>
 			<artifactId>icu4j</artifactId>
 			<version>${icu4j-version}</version>
 		</dependency>
+		
 		<dependency>
 			<!-- Find this at http://apps.icu-project.org/icu-jsp/downloadPage.jsp?ver=53.1&base=j&svn=release-53-1 -->
 			<groupId>com.ibm.icu</groupId>
 			<artifactId>icu4j-localespi</artifactId>
 			<version>${icu4j-version}</version>
 		</dependency>
+		
 	</dependencies>
 
 	<profiles>
@@ -173,6 +191,25 @@
 		<plugins>
 
 			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>properties-maven-plugin</artifactId>
+				<version>1.0.0</version>
+				<executions>
+					<execution>
+						<phase>initialize</phase>
+						<goals>
+							<goal>read-project-properties</goal>
+						</goals>
+						<configuration>
+							<files>
+								<file>src/build/build.properties</file>
+							</files>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
 				<artifactId>maven-clean-plugin</artifactId>
 				<version>${maven-clean-plugin-version}</version>
 				<configuration>
@@ -195,6 +232,8 @@
 								<include>bower.json</include>
 								<include>maven-properties.json</include>
 								<include>package.json</include>
+								<include>npm/package.json</include>
+								<include>forever.log</include>
 							</includes>
 						</fileset>
 					</filesets>
@@ -293,6 +332,7 @@
 					<systemPropertyVariables>
 						<webDriver>${webDriver}</webDriver>
 						<JAVA_TOOL_OPTIONS>-Dfile.encoding=UTF-8 -DthDeploy=${thDeploy}</JAVA_TOOL_OPTIONS>
+						<webdriver.gecko.driver>${webdriver.gecko.driver}</webdriver.gecko.driver>
 					</systemPropertyVariables>
 					<argLine>-Dfile.encoding=UTF-8 -DthDeploy=${thDeploy} -Djava.ext.dirs=${project.build.directory}/lib</argLine>
 					<properties>
@@ -301,7 +341,7 @@
 				</configuration>
 
 				<executions>
-					<execution>
+ 					<execution>
 						<configuration>
 							<includes>
 								<include>**/RunFailSafe.java</include>
@@ -315,7 +355,7 @@
 							<goal>integration-test</goal>
 						</goals>
 					</execution>
-					<execution>
+ 					<execution>
 						<configuration>
 							<includes>
 								<include>**/RunFailSafeNode.java</include>
@@ -332,10 +372,39 @@
 				</executions>
 			</plugin>
 
-			<plugin>
+ 			<plugin>
 				<artifactId>maven-antrun-plugin</artifactId>
 				<version>1.6</version>
 				<executions>
+					<execution>
+						<id>default-cli</id>
+						<configuration>
+							<target>
+								<exec executable="forever" spawn="false">
+									<arg value="start" />
+									<arg value="-l" />
+									<arg value="${project.basedir}/forever.log" />
+									<arg value="-o" />
+									<arg value="out.log" />
+									<arg value="-e" />
+									<arg value="err.log" />
+									<arg value="--minUptime" />
+									<arg value="30000" />
+									<arg value="--spinSleepTime" />
+									<arg value="15000" />
+									<arg value="${thThymolNodeServer}" />
+									<arg value="-c" />
+									<arg value="${project.basedir}/src/build/server-config" />
+									<arg value="${thDeploy}/templates" />
+									<arg value="" />
+									<arg value="${project.basedir}/dist/thymol-node" />
+								</exec>
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
 					<execution>
 						<id>start-third-parties</id>
 						<phase>pre-integration-test</phase>
@@ -345,12 +414,14 @@
 									<arg value="start" />
 									<arg value="--minUptime" />
 									<arg value="30000" />
+									<arg value="--spinSleepTime" />
+									<arg value="15000" />
 									<arg value="${thThymolNodeServer}" />
-									<arg value="-c" />									
-									<arg value="${project.basedir}/src/build/server-config" />									
-									<arg value="${thDeploy}/templates" />									
-									<arg value="" />									
-									<arg value="${project.basedir}/dist/thymol-node" />									
+									<arg value="-c" />
+									<arg value="${project.basedir}/src/build/server-config" />
+									<arg value="${thDeploy}/templates" />
+									<arg value="" />
+									<arg value="${project.basedir}/dist/thymol-node" />
 								</exec>
 							</target>
 						</configuration>
@@ -375,8 +446,8 @@
 					</execution>
 				</executions>
 			</plugin>
-
-			<plugin>
+ 
+ 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${maven-surefire-plugin-version}</version>
 				<configuration>
@@ -386,13 +457,14 @@
 					<systemPropertyVariables>
 						<webDriver>${webDriver}</webDriver>
 						<JAVA_TOOL_OPTIONS>-Dfile.encoding=UTF-8</JAVA_TOOL_OPTIONS>
+						<webdriver.gecko.driver>${webdriver.gecko.driver}</webdriver.gecko.driver>
 					</systemPropertyVariables>
 					<properties>
 						<thThymolPrelude>Date.prototype.toString=Date.prototype.toUTCString;</thThymolPrelude>
 					</properties>
 				</configuration>
 			</plugin>
-
+ 
 			<plugin>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
@@ -411,6 +483,7 @@
 						</goals>
 						<configuration>
 							<waitForChild>false</waitForChild>
+							<!--jvmArgs>-Dfile.encoding=UTF-8 -Djava.ext.dirs=${project.build.directory}/lib -Xdebug -Xrunjdwp:transport=dt_socket,address=8888,server=y suspend=y</jvmArgs -->
 							<jvmArgs>-Dfile.encoding=UTF-8 -Djava.ext.dirs=${project.build.directory}/lib</jvmArgs>
 						</configuration>
 					</execution>
